@@ -33,8 +33,11 @@ glibc (2.7-7) unstable; urgency=low
     #464395.
   * rules.d/build.mk: build the locales in the build target instead of the
     install one to workaround a bug in fakeroot.  Closes: #464924.
+  * patches/alpha/local-dl-procinfo.diff: fix _dl_string_platform() to accept
+    NULL pointers, which happens on statically linked binaries.  Closes: 
+    bug#456260.
 
- -- Aurelien Jarno <aurel32@debian.org>  Sun, 10 Feb 2008 21:43:01 +0100
+ -- Aurelien Jarno <aurel32@debian.org>  Mon, 11 Feb 2008 00:42:32 +0100
 
 glibc (2.7-6) unstable; urgency=low
 
